[package]
name = "rust-epub"
version = "0.1.0"
authors = ["lifei6671 <lifei6671@gmail.com>"]
description = "一个Rust实现的用于编辑和创建 EPUB 文件的库。"
edition = "2021"

[dependencies]
quick-xml = { version = "0.37.1" ,features = ["serde","serialize"]}
serde = { version = "1.0.216", features = ["derive"] }
chrono = "0.4.39"
mime = "0.3.17"
dashmap = "6.1.0"
rand = "0.8.5"
[[example]]
name = "toc"